--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "timeops-manager-backend",
   "version": "1.0.0",
   "author": "Tom Stöhrer",
+  "private": true,
   "main": "src/app.ts",
   "scripts": {
     "dev": "nodemon src/app.ts",
@@ -12,6 +13,7 @@
   },
   "dependencies": {
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "pg": "^8.13.3",
     "ts-node": "^10.9.2"
   },
@@ -20,11 +22,13 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.20.0",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.10",
     "babel-jest": "^29.7.0",
     "eslint": "^9.20.1",
+    "nodemon": "^3.1.9",
     "prettier": "^3.5.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.1"
+    "typescript": "^5.7.3"
   }
 }
