--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     ports:
       - '3000:3000'
     environment:
-      - NODE_ENV=development
-      - DATABASE_URL=postgres://user:password@db:5432/userdatabase
+      - NODE_ENV=${NODE_ENV}
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - db
 
@@ -18,11 +18,30 @@ services:
     ports:
       - '5432:5432'
     environment:
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=userdatabase
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - db_data:/var/lib/postgresql/data
+
+  backup:
+    image: alpine
+    volumes:
+      - db_data:/var/lib/postgresql/data
+      - ./backups:/backups
+    entrypoint: >
+      sh -c "
+      apk add --no-cache postgresql-client &&
+      mkdir -p /backups &&
+      echo '${BACKUP_CRON} pg_dump -h db -U ${POSTGRES_USER} ${POSTGRES_DB} > /backups/backup_$(date +\%Y\%m\%d\%H\%M\%S).sql' | crontab - &&
+      crond -f
+      "
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    depends_on:
+      - db
 
 volumes:
   db_data:
