--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "main": "src/app.ts",
   "scripts": {
     "dev": "nodemon src/app.ts",
-    "dev:db": "docker-compose -f docker-compose.dev.yml up",
+    "dev:db": "sudo docker compose up -d db",
     "build": "tsc",
     "start": "node dist/app.js",
     "test": "jest"
   },
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^7.2.1",
     "pg": "^8.13.3",
     "ts-node": "^10.9.2"
   },
@@ -28,6 +30,7 @@
     "eslint": "^9.20.1",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.1",
+    "prisma": "^6.5.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   }
