Add simple auth method

--- a/package.json
+++ b/package.json
@@ -13,24 +13,21 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
-    "pg": "^8.13.3",
-    "ts-node": "^10.9.2"
+    "pg": "^8.13.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.9",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-typescript": "^7.26.0",
-    "@eslint/js": "^9.20.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
-    "babel-jest": "^29.7.0",
-    "eslint": "^9.20.1",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.1",
     "prisma": "^6.5.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   }
