--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
+    "multer": "^1.4.5-lts.2",
     "pg": "^8.13.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.10",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.1",
